--- a/Dokumentation/20190218.md
+++ b/Dokumentation/20190218.md
@@ -4,6 +4,7 @@
 
 ### Partnerarbeit
 
+* VSC starten Projekt N27 laden.
 * Nehmen Sie sich einen Kopfhörer
 * Gehen Sie nach https://padlet.com/stbaeumer/quelltext
 * Sie sehen 8 kurze Videos. 
