--- a/Journal/20200221.md
+++ b/Journal/20200221.md
@@ -3,4 +3,5 @@
 * Beim ```INSERT INTO konto``` muss die idKunde hinzugefügt werden.
 * Beim ```CREATE TABLE ... konto ...``` muss die idKunde mit dem Typ ```INT(11)``` angelegt werden.
 * In der Klasse ```Konto``` muss die ```IdKunde``` als Eigenschaft ergänzt werden.
-* Die Eigenschaft ```ÌdKunde``` muss bei der Instanziierung des Kontos initialisiert werden. 
+* Die Eigenschaft ```IdKunde``` muss bei der Instanziierung des Kontos initialisiert werden. 
+
